--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.0"
+env_logger = "0.9.0"
 png = "0.17"
 cairo-rs = { version = "0.15", features = ["png"] }
 nalgebra = "0.31"
