--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ cairo-rs = { version = "0.15", features = ["png"] }
 nalgebra = "0.31"
 lyon_geom = "1.0.3"
 skiplist = "0.4.0"
+pathfinding = "4.2.0"
